updated at: 2023-04-25 20:03, Miilo - Alma Store - BOOTH

--- a/VRChat/72/1019972.html
+++ b/VRChat/72/1019972.html
@@ -74,9 +74,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "bMD1kOp/kydRXLg6kYS3IDeJf68TN2jo6mdp0xxhx4I="></script>
+    "6a0XtiDlUn/6oa7oHqfpANTP1YFCWEpFu0CIoZps4iY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Miilo","description":"\u003c概要\u003e\n白と金を基調とした銃です。リボルバー、対戦車ライフル、スナイパーライフルをモチーフとしたものです。いくつかのmeshに分かれてます。シリンダーのクリスタルは一本ずつ外せます。本物が見たい方はshop概要欄からお店に飛べるので、そちらからどうぞ。\n\n\u003c中身\u003e\n・unitypackage(prefab,fbx,texture,materialなど)\n・read me\n\n\u003c規約の目安\u003e\n規約は同封のread meに書いてあります。これは目安としてください。これは規約ではありません。\n・商業利用可\n・二次配布、3Dモデルとしての販売の禁止\n・著作権はすべてAcysShiaruReusに帰属する","url":"https://booth.pm/ja/items/1019972","offers":{"priceCurrency":"JPY","@type":"Offer","price":"500"},"image":"https://booth.pximg.net/c/620x620/2d13a0c0-2756-4fa9-b3b6-77f3f8714856/i/1019972/ccd5f3f9-a338-45ad-b51f-1a6cde97789b_base_resized.jpg"}
     </script>
@@ -90,7 +90,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bMD1kOp/kydRXLg6kYS3IDeJf68TN2jo6mdp0xxhx4I="></script>
+    nonce="6a0XtiDlUn/6oa7oHqfpANTP1YFCWEpFu0CIoZps4iY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -114,6 +114,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1019972/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               93
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1019972/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               93
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
