--- a/VRChat/85/1019185.html
+++ b/VRChat/85/1019185.html
@@ -72,9 +72,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ReFTPagipAg+pb2AoGDQvSNkayM2EGbO9xKjchVYoAM="></script>
+    "SFmk1Vi3n6Ov+eaoTKM+DTamECE8DgxYEDoDjkaw4nk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"生体保存機械","description":"なんか保存するやつ","url":"https://booth.pm/ja/items/1019185","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/8af5d090-df4c-4849-965f-b38941abdc0c/i/1019185/24f5fc72-68e3-44a9-9ba8-4a792f86f95f_base_resized.jpg"}
     </script>
@@ -88,7 +88,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ReFTPagipAg+pb2AoGDQvSNkayM2EGbO9xKjchVYoAM="></script>
+    nonce="SFmk1Vi3n6Ov+eaoTKM+DTamECE8DgxYEDoDjkaw4nk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -112,6 +112,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -156,7 +158,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1019185/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               163
@@ -171,14 +173,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1019185/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               163
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
