--- a/VRChat/01/1019101.html
+++ b/VRChat/01/1019101.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "VzvULJEPR2hEjVLw2tFjURpb+XkQcRwO875X35Lql8I="></script>
+    "YKOSvEYsGKaYUj19nOWPzLdPCLF5iDfumBpwhre5RYM="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"人魚（骨）","description":"Humanoid Type\n\nunitypackage形式\n　モデルfbx（2674ポリゴン）\n　テクスチャjpg（1024×1024）\n　設定済みPrefab\n\npsd形式（テクスチャ）\n　UV展開図\n　陰影\n　地\n\nシェイプキー\n・目＿閉じる\n・目＿縮小\n・足＿生える\n・リップシンク有\n\n操作系\nDTキーボード デフォルト 当アバターの設定\nshift + f1 idle なし\nshift + f2 fist 目＿閉じる\nshift + f3 handOpen 足＿生える\nshift + f4 fingerPoint なし\nshift + f5 victry なし\nshift + f6 rocknroll 目＿縮小\nshift + f7 handGun なし\nshift + f8 thumbsUp なし\n\nこの製品はVRChatのアバターとしての利用を想定していますが、商用・非商用問わず自由に利用することができます。\nこの製品のモデルファイルの無料配布は禁止します。\nこの製品のモデルファイルの販売を行う場合は、改変の有無にかかわらず購入価格以上の価格を設定してください。\nこの製品を利用して発生したトラブルに関しては、一切の責任を負いません。\nPrefabをHierarchyに入れてアップロードするだけで利用できます。","url":"https://booth.pm/ja/items/1019101","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/4f32f1ee-7bf2-4a36-b748-015706952edc/i/1019101/3c11d055-8c22-4995-bac0-ecceb289ead8_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VzvULJEPR2hEjVLw2tFjURpb+XkQcRwO875X35Lql8I="></script>
+    nonce="YKOSvEYsGKaYUj19nOWPzLdPCLF5iDfumBpwhre5RYM="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1019101/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1019101/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               12
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
