--- a/VRChat/69/1018469.html
+++ b/VRChat/69/1018469.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "v+eWdvomXzeECHYehHis5ufVyzwCSxi7pQtz0gHh7sA="></script>
+    "kLsE4kQ9fb6DxIMfsvER4fvzCsKZIAsLXExif33fxlA="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat向け　武器　「ヨコシマブレード」","description":"刀、もしくはナイフのような武器の3Dモデルです。\nこの武器は主にVRChatでアバターに持たせることを想定しています。\n\n自分が持つようにお試しで作ったので大きさとか細部はテキトーになっています。(無料配布なので許してね)\nユニティパッケージになっているのでD＆Dですぐに持たせることができます。ナイフモードと刀モード2種類のプレハブを入れておきましたが、シェイプキーで刀身が伸縮するので好きな長さに調節できます。\n\n※改良型を追加しました。\nこちらはシェイプキーでナイフにできない代わりに質感にこだわっています。","url":"https://booth.pm/ja/items/1018469","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"0"},"image":"https://booth.pximg.net/c/620x620/9fbdc596-2bd2-4262-98df-0a0fa6cf30d9/i/1018469/5e2287dd-6e80-41eb-af66-8b6ed248231b_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="v+eWdvomXzeECHYehHis5ufVyzwCSxi7pQtz0gHh7sA="></script>
+    nonce="kLsE4kQ9fb6DxIMfsvER4fvzCsKZIAsLXExif33fxlA="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1018469/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1306
+                              1308
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1018469/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              1306
+                              1308
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
