--- a/VRChat/38/1018338.html
+++ b/VRChat/38/1018338.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "wkEpvDUtqHg1AtxUbulRTyZprakJ6naQLqNcZ4e5uZc="></script>
+    "BJ0QRKGbVPDSl+tEEtpyb7RirzukHIeyJyOcj3yBnYU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChatアバター用オプションパーツ「おてがるチーク」","description":"[おてがるチーク]\nポリ数4（一枚につき）、マテリアル数1、テクスチャ枚数1\nUnity上でアバターに後付で導入できる、シェイプキー入のチークです。\n\n●更新履歴\n9/19 …　Boothでの配布開始\n\n●プランに関して\nフリープラン、有料プランで内容物に違いはありません。基本的にはフリープランをご利用下さい。\nお金を入れるという気になられた方は有料プランをご利用下さい。","url":"https://booth.pm/ja/items/1018338","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/e6170a80-5060-4a22-8c22-c10792111eba/i/1018338/f756ee25-eb32-4073-81c3-7184f40c0ebe_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wkEpvDUtqHg1AtxUbulRTyZprakJ6naQLqNcZ4e5uZc="></script>
+    nonce="BJ0QRKGbVPDSl+tEEtpyb7RirzukHIeyJyOcj3yBnYU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1018338/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               94
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1018338/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               94
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
