--- a/VRChat/62/1018062.html
+++ b/VRChat/62/1018062.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "4d2YEUkyi6P60wbTN86jlE5UukHFWzRRSG4Y1C9csVo="></script>
+    "esb0fYPN6XAeT20X+m+LydibpHTjzAIAKAEAeqC41Rc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat対応3Dモデル「鬼人霧雨」Ver.2.1","description":"\n※更新18.10.29　Ver1.1\n　・ﾚｶﾞｼｰｱﾆﾒｰｼｮﾝ廃止に伴う瞬き修正\n※更新19.02.03　Ver1.2\n　・瞬き再修正、シェーダ設定変更\n※更新20.03.20　Ver.2.0\n　・名前以外全部\n※更新20.07.05　Ver.2.1\n　・衣装追加(Ｔシャツ,短パン,パーカー,ジーンズ)\n　・肩のボーン,メッシュ修正\n　・頭のサイズを縮小\n　・ｼｪｲﾌﾟｷｰの設定変更\n　・モデルの位置を前に変更\n\n「鬼人霧雨」はVRChatでの使用を想定した3Dモデルです。\n男性アバターの改変ベースが少ない事から製作したモデルになります。\n改変・商業利用OK\n\n\n※本モデルは、事前にVRC_SDKの導入が必要です。\n※「UnityChanToonShaderVer2_Project_v207_5」が再配布の形で同封されています。\n\n仕様\n・ポリゴン数：30485ポリゴン\n・リップシンク15種類\n・表情アニメーション17種類\n・自動まばたき\n\n\nセット内容\n・Unity package\n　　　鬼人霧雨　Ver.2.1\n・モデルfbxデータ\n・Textureファイル\n　　ﾃｸｽﾁｬ　6枚\n　　UV展開配置図　5枚\n    ﾏｽｸ　3枚\n　　ﾉｰﾏﾙﾏｯﾌﾟ　1枚\n・サムネ\n\n\n\n利用規約\n\n1.本モデルの著作権は製作者に帰属します。\n\n2.改変前また改変後の本モデルの再配布を禁止します。\n\n3.本モデルを使用した一切の損害について製作者は責任を負いません。\n\n4.モデルの政治利用・差別的・侮辱的利用を禁止します。\n\n\n\n※購入した時点で本利用規約に同意したものとします。\n※利用規約が変更した場合は、最新物が適用されます。\n\n\n連絡先\ntwitter：@hutabosi777","url":"https://booth.pm/ja/items/1018062","offers":{"priceCurrency":"JPY","@type":"Offer","price":"3000"},"image":"https://booth.pximg.net/c/620x620/f03af7d7-31bf-49c1-b051-6718e95e41e0/i/1018062/e87ceec7-6e96-4bda-b70c-404d0ee3841f_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="4d2YEUkyi6P60wbTN86jlE5UukHFWzRRSG4Y1C9csVo="></script>
+    nonce="esb0fYPN6XAeT20X+m+LydibpHTjzAIAKAEAeqC41Rc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -140,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -154,7 +153,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -195,10 +195,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1018062/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              206
+                              207
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -210,14 +210,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1018062/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              206
+                              207
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
