updated at: 2023-04-25 20:05, 【VRChat向け】心音10パターンセット Vol.01 - 1619Hz - BOOTH

--- a/VRChat/46/1017846.html
+++ b/VRChat/46/1017846.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "5BvaEQBO0KoJ3On+LKmAEAM4XKbgYUTQFH7pSTxfwKs="></script>
+    "HqGGAItj6GL7Xe2X2pAr9kQ1qHKD+T99sqQVi7dqFxc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【VRChat向け】心音10パターンセット Vol.01","description":"◆VRChatを主とした心音データ集です\n◇内容物\nwavフォーマット\n生データです。\n改変される場合はこちらを推奨します。\n\nmp3フォーマット\n192kbpsでエンコードしました。\n導入される場合はこちらを推奨します。","url":"https://booth.pm/ja/items/1017846","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/ad46429b-130a-4fcb-b6cc-da3e57ffe306/i/1017846/89322b66-86b6-4725-93a0-4f4a8196e2a1_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="5BvaEQBO0KoJ3On+LKmAEAM4XKbgYUTQFH7pSTxfwKs="></script>
+    nonce="HqGGAItj6GL7Xe2X2pAr9kQ1qHKD+T99sqQVi7dqFxc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,7 +182,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1017846/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               162
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1017846/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               162
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
