--- a/VRChat/98/1017098.html
+++ b/VRChat/98/1017098.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "UyWb7fuZQ9zzYrzIesFAFMPZD0qFWFzt9skKU4rxuYI="></script>
+    "YLJp6YXknNDmo8mLBY7R/0c6aaF9GDOVd67IZdfp7IU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Dagger（曲刀短剣）","description":"効果的な斬撃と刺突攻撃の両面を強く意識した短剣です。\nSketchfabで3Dモデルの閲覧もできます。\n\nポリゴン数　△994\nテクスチャ　2048*2048 3枚\n\nUnityPakage同梱、すぐにモデルに合わせることができます。","url":"https://booth.pm/ja/items/1017098","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/719c3d6d-7dd0-4162-aa85-2ed21e39cf9a/i/1017098/7b242bd9-e8b6-4ea3-adf6-b6075c08639d_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="UyWb7fuZQ9zzYrzIesFAFMPZD0qFWFzt9skKU4rxuYI="></script>
+    nonce="YLJp6YXknNDmo8mLBY7R/0c6aaF9GDOVd67IZdfp7IU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1017098/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               78
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1017098/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               78
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
