updated at: 2023-04-25 20:05, GPUパーティクルセット ver1.3 - virtual-boys - BOOTH

--- a/VRChat/90/1016790.html
+++ b/VRChat/90/1016790.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "0TN/Kgktwmkg8SXTHfVhhkt5PxaXLAlrsrx9uxgoQEc="></script>
+    "8hSgloPG2GnGNQ6XOBKVFw+H/VM5in4xzTjbQn22oxs="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"GPUパーティクルセット ver1.3","description":"ナルの作ったGPUパーティクルの12個セットだよ！\n\n描画範囲の設定などをしたサンプルも入ってるからすぐに使えるよ！\n\n全てRenderTextureは使わずに時間変化で動くシェーダーだよ！\n\n\n※透過系のGPUパーティクルは描画負荷が高めで、至近距離で見たりブルームがかかるなどでGPU負荷が跳ね上がることがあるよ！VRCなどで利用する場合、ほかのプレイヤーの迷惑にならないように十分配慮して使ってね！","url":"https://booth.pm/ja/items/1016790","offers":{"priceCurrency":"JPY","@type":"Offer","price":"920"},"image":"https://booth.pximg.net/c/620x620/a7137b00-b4ea-4679-a5bd-dc626e07566a/i/1016790/8ff4e29d-ee93-4cb3-9ad5-56852b30d3d9_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="0TN/Kgktwmkg8SXTHfVhhkt5PxaXLAlrsrx9uxgoQEc="></script>
+    nonce="8hSgloPG2GnGNQ6XOBKVFw+H/VM5in4xzTjbQn22oxs="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,10 +160,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1016790/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              599
+                              600
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1016790/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              599
+                              600
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
