--- a/VRChat/82/1016682.html
+++ b/VRChat/82/1016682.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "8nlQzQ4hLnMWVk6gF02le6F7IRlp/uHsoJv8nc9fCu4="></script>
+    "Mmy5PQPsyfeA9FYA16E8W6m/BAzILSiJhxLL0G4mJyY="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ゴスロリ風 洋傘Vol.2","description":"[ゴスロリ風　洋傘Vol2]\n\n本モデルはゴスロリ風　洋傘の第二弾です(モデルはすべて新規作成)\n今回は3種類のモデルと4種類ののカラーバリエーションを収録、お好きなモデルをご使用、または改変していただければ幸いです。\n\nVRChatでの使用を想定していますが、MMDやVRMで使っていただいても構いません\nプレハブはUTS2の仕様に設定してあります。\n\nフリルを多用する都合上、小物としてはややハイポリですので基本は呼び出すか、又はanimationを使うことをお勧めします。\nシェーダーUTS2","url":"https://booth.pm/ja/items/1016682","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/b5c8e164-b000-4d32-9091-cb4b048af958/i/1016682/5bf6f750-2325-414b-8a92-823dd247f287_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="8nlQzQ4hLnMWVk6gF02le6F7IRlp/uHsoJv8nc9fCu4="></script>
+    nonce="Mmy5PQPsyfeA9FYA16E8W6m/BAzILSiJhxLL0G4mJyY="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,7 +165,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1016682/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               452
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1016682/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               452
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
