updated at: 2023-04-25 20:06, リボン(VRChat利用可能) - おきつねふぁくとりー - BOOTH

--- a/VRChat/46/1016146.html
+++ b/VRChat/46/1016146.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "piCTcdV47JDOC20bUebQmyLXuHEByBxbTvYL6EtH/rE="></script>
+    "PUz5QT7zVjO+X6bMBEhmfH19OYG2qXQkrswOjnHlqgI="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"リボン(VRChat利用可能)","description":"リボンです。VRChat利用可。\n端がナナメのものと通常のものの2種類があります。\nUV展開はしておりませんので、必要であれば各自でお願いします。\n無料です。\n\n△408","url":"https://booth.pm/ja/items/1016146","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/2a1d68f2-987f-4432-b142-5cbae38f36da/i/1016146/1157c8df-f259-4f25-b6da-56285fbe0164_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="piCTcdV47JDOC20bUebQmyLXuHEByBxbTvYL6EtH/rE="></script>
+    nonce="PUz5QT7zVjO+X6bMBEhmfH19OYG2qXQkrswOjnHlqgI="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -175,7 +177,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1016146/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
@@ -190,14 +192,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1016146/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               32
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
