updated at: 2023-04-25 20:07, 【3Dモデル】眼鏡【VRChat向け】 - つなかん工房 - BOOTH

--- a/VRChat/60/1014760.html
+++ b/VRChat/60/1014760.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "jkWXiRBftgbQrD7i8VVA3+IPB1jn6Xy3E7qDpApVupM="></script>
+    "E+ClQhU7LKJcIgLZ+Jd646FGurCNPgwcZVI2PJEo6wU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【3Dモデル】眼鏡【VRChat向け】","description":"VRChat向けの3Dモデルです。\n\n無料版・有料版に内容の差異はありません。\n\n※※※　間違いにご注意ください　※※※\n\nレンズ有り・無し、2種類のfbxファイルを用意しました。\n\nテクスチャファイルには、サンプルテクスチャが同封されています。\n","url":"https://booth.pm/ja/items/1014760","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/c9d4b93c-8161-4c35-a69e-4906ebf93b6a/i/1014760/9749fefb-3153-48cf-869f-a68236d859d7_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="jkWXiRBftgbQrD7i8VVA3+IPB1jn6Xy3E7qDpApVupM="></script>
+    nonce="E+ClQhU7LKJcIgLZ+Jd646FGurCNPgwcZVI2PJEo6wU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1014760/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               302
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1014760/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               302
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
