updated at: 2023-04-25 20:07, VRChat用3Dアクセサリー「薔薇」 - 水無月研究室 - BOOTH

--- a/VRChat/50/1014350.html
+++ b/VRChat/50/1014350.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "wCaS/6df76A8UA5yPai6VxlIx27xt510Rw3a02NjJXs="></script>
+    "ezCarB6F4j0nU71DEseTts5kcMAI+1XZj7aRZ048C7I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRChat用3Dアクセサリー「薔薇」","description":"本製品は、ポリゴン数1948の花［薔薇］のfbx形式3Dモデルです。\n\n2019/01/23 追記\nメッシュ数とマテリアル数を、それぞれ1つにまとめた統合版をアップロードしました。","url":"https://booth.pm/ja/items/1014350","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/2014e33f-05a5-4e3e-a47f-302975c62b4c/i/1014350/f69eecc1-84a1-47f6-8e95-5b054b7f4f59_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="wCaS/6df76A8UA5yPai6VxlIx27xt510Rw3a02NjJXs="></script>
+    nonce="ezCarB6F4j0nU71DEseTts5kcMAI+1XZj7aRZ048C7I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1014350/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               51
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1014350/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               51
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
