updated at: 2023-04-25 20:08, ティーパーティセット【VRC Ready 3Dモデルセット】 - 車軸直売所 SHAJIKU store - BOOTH

--- a/VRChat/20/1014120.html
+++ b/VRChat/20/1014120.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "ee0aW5hmFDJHf3z8tSdL9Qi0InG4NbGLuH2fJ/jUwks="></script>
+    "YFO+Z8eHvIPgJka0JbcMHJLsQnRGQljsqoqQc7LPE2I="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ティーパーティセット【VRC Ready 3Dモデルセット】","description":"Made by 車軸制作所 SHAJIKU works\n\n最終更新日：2020/02/03\n動作環境についての注意事項を追記\nVer1.01 一部Triggerのリンク切れを修正","url":"https://booth.pm/ja/items/1014120","offers":{"priceCurrency":"JPY","@type":"Offer","price":"450"},"image":"https://booth.pximg.net/c/620x620/073f790d-621e-4ecf-a85e-04aa2017a614/i/1014120/0095ad3e-d224-419b-b526-d6e6ec10857e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ee0aW5hmFDJHf3z8tSdL9Qi0InG4NbGLuH2fJ/jUwks="></script>
+    nonce="YFO+Z8eHvIPgJka0JbcMHJLsQnRGQljsqoqQc7LPE2I="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -163,10 +165,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1014120/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              437
+                              438
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -178,14 +180,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1014120/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              437
+                              438
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
