updated at: 2023-04-25 20:08, スチームパンクライフル - 満天星躑躅だよ - BOOTH

--- a/VRChat/43/1014143.html
+++ b/VRChat/43/1014143.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "a1yPohPbGfHcarzeTke6A46xrvTA0uldJrvBxXQod7M="></script>
+    "YDrsdu8AXhz4LJahoIJ5MjwmZUCtvQxg/RlKmdRhXHg="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"スチームパンクライフル","description":"主にVRChat向けとして使用できるスチームパンク風ボルトアクションライフルです。\nVRChat以外の動画作品･ゲーム等での利用も可能です。\n\nポリゴン数3206\n\nVRChatで使用する場合はアニメーションオーバーライドで手に持たせるなどして使用してください。\nボルト及びトリガーにボーンを設定してありますのでアニメーションなどで可動させることができます。\n\n※VRChat内でも銃器の取扱にはご注意ください。相手に不用意に銃口を向けると不快感を与えてしまうことがあります。","url":"https://booth.pm/ja/items/1014143","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/aa7414fb-c4aa-4710-9c36-eb78e1f7edbb/i/1014143/5d0356c3-8dd1-43fc-8722-9a4cfa155606_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="a1yPohPbGfHcarzeTke6A46xrvTA0uldJrvBxXQod7M="></script>
+    nonce="YDrsdu8AXhz4LJahoIJ5MjwmZUCtvQxg/RlKmdRhXHg="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -119,6 +119,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1014143/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               146
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1014143/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               146
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
